--- a/flowSite/templates/base.html
+++ b/flowSite/templates/base.html
@@ -64,8 +64,7 @@
                             <div class="col-md-10 text-right menu-1">
                                 <ul>
                                     <li class="active"><a href="{% url 'index' %}">Home</a></li>
-                                    <li class="has-dropdown">
-                                        <a href="#">Works</a>
+                                    <li class="has-dropdown"><a href="#">Works</a>
                                         <ul class="dropdown">
                                             <li><a href="#">Works grid with text</a></li>
                                             <li><a href="#">Works grid w/o text</a></li>
@@ -74,7 +73,6 @@
                                     <li><a href="#">Services</a></li>
                                     <li><a href="#">Blog</a></li>
                                     <li><a href="#">About</a></li>
-                                    <li><a href="#">Shop</a></li>
                                     <li><a href="{% url 'contact' %}">Contact</a></li>
                                 </ul>
                             </div>
@@ -103,7 +101,7 @@
                 <div class="container">
                     <div class="row row-pb-md">
                         <div class="col-md-3 colorlib-widget">
-                            <h4>About unapp</h4>
+                            <h4>About FlowHub</h4>
                             <p>Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
                             <p>
                                 <ul class="colorlib-social-icons">
@@ -164,20 +162,6 @@
                                 <li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> info@yoursite.com</a></li>
                                 <li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
                             </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="copy">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12 text-center">
-                                <p>
-                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br>
-                                    Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a href="http://pexels.com/" target="_blank">Pexels</a>
-                                </p>
-                            </div>
                         </div>
                     </div>
                 </div>
