--- a/flowSite/templates/index.html
+++ b/flowSite/templates/index.html
@@ -2,9 +2,8 @@
 {% load static %}
 
 {% block message %}
-    <h2>Take on your biggest projects and goals</h2>
-    <p>with Unapp's high quality features</p>
-    <p><a href="#" class="btn btn-primary btn-lg btn-custom">Get premium</a></p>
+    <h2>FlowHub</h2>
+    <p></p>
 {% endblock %}
 
 {% block container %}
