--- a/flowSite/templates/base.html
+++ b/flowSite/templates/base.html
@@ -145,8 +145,7 @@
                                 </div>
                             </div>
                             <div class="f-blog">
-                                <a href="#" class="blog-img" style="background-image: url({% static 'images/blog-3.jpg'%});">
-                                </a>
+                                <a href="#" class="blog-img" style="background-image: url({% static 'images/blog-3.jpg'%});"></a>
                                 <div class="desc">
                                     <h2><a href="#">Imahe the biggest photography studio</a></h2>
                                     <p class="admin"><span>30 March 2018</span></p>
