--- a/flowSite/templates/index.html
+++ b/flowSite/templates/index.html
@@ -87,7 +87,7 @@
 				<div class="row">
                     <div class="col-md-4 animate-box">
                         <article>
-                            <h2>Clebson Farias</h2>
+                            <h2>Clebson C Farias</h2>
                             <a href="#" class="blog-img" style="background-image: url({% static 'images/blog-3.jpg'%});"></a>
                             <p class="author-wrap">
                                 <a href="#" class="author-img" style="background-image: url({% static 'images/blog-1.jpg' %});"></a>
